# rust-uniform-resource-identifier

./: .gitignore  Cargo.toml  README.md
benches/: parse_authority.rs  parse_scheme.rs
src/: lib.rs  macros.rs  path.rs  scheme.rs  uri.rs  utils.rs
src/authority/: host.rs  mod.rs  port.rs  userinfo.rs
src/uri/: mod.rs
src/uri/authority/: mod.rs
src/uri/authority/host/: mod.rs
src/uri/authority/port/: mod.rs
src/uri/authority/userinfo/: mod.rs
src/uri/fragment/: mod.rs
src/uri/hier_part/: mod.rs
src/uri/hier_part/authority/: mod.rs
src/uri/hier_part/authority/host/: mod.rs
src/uri/hier_part/authority/port/: mod.rs
src/uri/hier_part/authority/userinfo/: mod.rs
src/uri/hier_part/path/: mod.rs
src/uri/path/: mod.rs
src/uri/query/: mod.rs
src/uri/scheme/: mod.rs
